--- a/frontend/src/components/Projects/FilesDragAndDrop.css
+++ b/frontend/src/components/Projects/FilesDragAndDrop.css
@@ -17,16 +17,10 @@
 
 
 .FilesDragAndDrop {
-  position: relative;
   
   .FilesDragAndDrop__placeholder {
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    width: 100%;
-    height: 100%;
+    /* width: 100%; */
+    /* height: 100%; */
     z-index: 9999;
     display: flex;
     align-items: center;
@@ -60,6 +54,10 @@
   padding-bottom: 8px;
   font-size: 20px;
   cursor: pointer;
+}
+
+.remove-image-button:hover {
+  background-color: rgb(203, 157, 40);
 }
 
 .preview-image {
